--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-three/drei": "^9.105.6",
+    "@react-three/fiber": "^8.18.0",
     "@supabase/supabase-js": "^2.45.1",
+    "@types/three": "^0.182.0",
     "autoprefixer": "10.4.16",
     "clsx": "^2.0.0",
     "critters": "^0.0.23",
@@ -22,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.4.1",
+    "three": "^0.182.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
